test/pass/lambdas/lambda_infer_noreturn.lly
define f(g: function(integer, integer))
{
    g(1, 2)
}

f({|a, b| a + b})
