test/fail/basic_syntax/wrong_arg_count_closed_call.lly
#[
SyntaxError: Wrong number of arguments to g (1 for 0).
    from wrong_arg_count_closed_call.lly:8
]#

define f(a: integer) {
    define g { a += 1 }
    g(1)
}
